--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
     <head>
         <title>Homework 2</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Homework</h1>
-        <div>
+        <div id="wrapper">
+            <h1>Homework</h1>
+            <div id="textarea">
 
-        </div>
-        <div>
-            <button>Caps</button>
-            <button>Red</button>
-            <button>Swap</button>
-        </div>
+            </div>
+            <div id="btnsarea">
+                <button class="btn">Caps</button>
+                <button class="btn">Red</button>
+                <button class="btn">Swap</button>
+            </div>
         
+    </div>
     </body>
 
 </html>
