--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="wrapper">
+        <div id="wrapper" class="hidden">
             <h1>Homework</h1>
             <div id="textarea">
+                <p>Click the button to add your words!</p>
+                <button onclick="addWords">Add</button>
 
             </div>
             <div id="btnsarea">
@@ -20,6 +22,7 @@
             </div>
         
     </div>
+    <script src="script.js"></script>
     </body>
 
 </html>
