--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width"
     </head>
     <body>
         <div id="wrapper" class="hidden">
             <h1>Homework</h1>
             <div id="textarea">
                 <p>Click the button to add your words!</p>
-                <button onclick="addWords">Add</button>
+                <ul id="wordList">
+                    <li id="one"></li>
+                    <li id="two"></li>
+                    <li id="three"></li>
+                </ul>
 
             </div>
             <div id="btnsarea">
