I add the code for the button caps

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
             </div>
             <div id="btnsarea">
-                <button class="btn">Caps</button>
-                <button class="btn">Red</button>
-                <button class="btn">Swap</button>
+                <button onclick="btnCaps()" id="caps" class="btn">Caps</button>
+                <button id="redFonts" class="btn">Red</button>
+                <button id="swapLetters" class="btn">Swap</button>
             </div>
         
     </div>
