button swap done, chartAt was use in this section important to write as appears

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="btnsarea">
                 <button onclick="btnCaps()" id="caps" class="btn">Caps</button>
                 <button id="redFonts" class="btn">Red</button>
-                <button id="swapLetters" class="btn">Swap</button>
+                <button onclick="btnSwap()" id="swapLetters" class="btn">Swap</button>
             </div>
         
     </div>
